edited README, added screenshot of app, removed .env info

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_NAME='tech_talk_db'
-DB_PASSWORD='2008Chevy'
-DB_USER='root'
-SESS_SECRET ='my_secret'
+DB_NAME=''
+DB_PASSWORD=''
+DB_USER=''
+SESS_SECRET =''
